Update Appilication Properties

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,5 @@
 spring.h2.console.enabled=true
+springfox.documentation.swagger-ui.enabled=true
 
 spring.datasource.url=jdbc:h2:mem:testdevdb
 spring.datasource.driverClassName=org.h2.Driver
